# auv2lab

./: .gitignore  CMakeLists.txt  bump-version.sh  ceremony.sh  refresh-au.sh
SinSynth.xcodeproj/: project.pbxproj
SinSynth.xcodeproj/project.xcworkspace/xcuserdata/izmar.xcuserdatad/: UserInterfaceState.xcuserstate
SinSynth.xcodeproj/xcuserdata/izmar.xcuserdatad/xcschemes/: xcschememanagement.plist
au-utils/: bump-version.sh  ceremony.sh  refresh-au.sh
build-resources/: Info.plist
build-resources/AUv3/: Info.plist
build-resources/App/: Info.plist
src/: AUv2Lab.cpp  AUv2Lab.h  AUv2LabView.mm  AUv3Lab.exp  AUv3Lab.h  AUv3Lab.mm  AUv3LabView.mm  SinSynth.cpp  SinSynth.h  SinSynthView.mm  main.m
src/app/: AppDelegate.h  AppDelegate.m  Info.plist  main.m
src/app/Base.lproj/: MainMenu.xib
src/extension/: AudioUnitViewController.h  AudioUnitViewController.m  Info.plist  MyAudioUnit.h  MyAudioUnit.m
